5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1764_1183.log
== TEST (2019-05-26 21:34:14) 
-- CODE:
from numpy import*

x=array(eval(input("numertps: ")))

if(x>0):
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 21:34:38) 
-- CODE:
from numpy import*

x=array(eval(input("numertps: ")))

if(x>0):
	print(a.any(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 21:35:16) 
-- CODE:
from numpy import*

x=array(eval(input("numertps: ")))

if(a.any(x)>0):
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 21:35:31) 
-- CODE:
from numpy import*

x=array(eval(input("numertps: ")))

if(x.any(x)>0):
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:38:16) 
-- CODE:
from numpy import*

x=array(eval(input("numertps: ")))

i=0

while(x>0):
	a=x
	i=-1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:39:08) 
-- CODE:
from numpy import*

x=array(eval(input("numertps: ")))

i=0

while(size(x)>i):
	if(x>0):
		a=x
	i=-1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:39:53) 
-- CODE:
from numpy import*

x=array(eval(input("numertps: ")))

i=0

while(size(x)>i):
	if(x[i]>0):
		a=x
	i=-1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:40:13) 
-- CODE:
from numpy import*

x=array(eval(input("numertps: ")))

i=0

while(size(x)>i):
	if(x[i]>0):
		a=x
		i=-1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:36:04) 
-- CODE:
from numpy import*

k=array(eval(input("numertps: ")))

y=[x for x in k if x >= 0]

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:36:23) 
-- CODE:
from numpy import*

k=array(eval(input("numertps: ")))

y=[x for x in k if x >= 0]

print(y)
-- EXECUTION TIME:
0.362574
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:36:41) 
-- CODE:
from numpy import*

k=array(eval(input("numertps: ")))

y=[x for x in k if x >= 0]

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:36:46) 
-- CODE:
from numpy import*

k=array(eval(input("numertps: ")))

y=array[x for x in k if x >= 0]

print(y)
-- ERROR:
File "XXXX", line 5
    y=array[x for x in k if x >= 0]
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:36:56) 
-- CODE:
from numpy import*

k=array(eval(input("numertps: ")))

y= array ([x for x in k if x >= 0])

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:37:14) 
-- CODE:
from numpy import*

k=array(eval(input("numertps: ")))

y= array ([x for x in k if x >= 0])

print(y)
-- EXECUTION TIME:
0.457271
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:34:20) 
-- CODE:
from numpy import*

k=array(eval(input("numertps: ")))

y= array ([x for x in k if x >= 0])

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:45:07) 
-- CODE:
from numpy import*

k=array(eval(input("numertps: ")))

y= array ([x for x in k if x >= 0])

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:45:20) 
-- CODE:
from numpy import*

k=array(eval(input("numertps: ")))

y= array ([x for x in k if x >= 0])

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:45:34) 
-- CODE:
from numpy import*

k=array(eval(input("numertps: ")))

y= array ([x for x in k if x >= 0])

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
